    * Refactored diff report generator to use Jinja2 templates

6/28/13 v0.1.4

    * Fix bug in which adding then deleting lines would result in
      incorrect lines included in the diff report.

6/25/13 v0.1.3

    * Fix a bug in which plus signs in the hunk line would cause a parser error

6/17/13 v0.1.2

    * Fix bug in which lines around a change were included in the report

6/10/13 v0.1.1

    * Compare with origin/master instead of master
    * Includes staged and unstaged changes in report