@@ -1,3 +1,4 @@
 Will Daly <will@edx.org>
 Bethany LaPenta <blapenta@edx.org>
 Ian Hoover <ihoover@edx.org>
+Peter Fogg <pfogg@edx.org>
