@@ -1,2 +1,3 @@
 VERSION = '0.1.4'
 DESCRIPTION = 'Automatically find diff lines that need test coverage.'
+QUALITY_DESCRIPTION = 'Automatically find diff lines with quality violations.'
