@@ -6,14 +6,14 @@ Diff: {{ diff_name }}
 {% if src_stats %}
 {% for src_path, stats in src_stats.iteritems() %}
 {% if stats.percent_covered < 100 %}
-{{ src_path }} ({{ stats.percent_covered|round(1) }}%): Missing line(s) {{ stats.missing_lines|join(',') }}
+{{ src_path }} ({{ stats.percent_covered|round(1) }}%): Missing line(s) {{ stats.violation_lines|join(',') }}
 {% else %}
 {{ src_path }} (100%)
 {% endif %}
 {% endfor %}
 -------------
 Total:   {{ total_num_lines }} line(s)
-Missing: {{ total_num_missing }} line(s)
+Missing: {{ total_num_violations }} line(s)
 Coverage: {{ total_percent_covered }}%
 -------------
 {% else %}
