@@ -1,0 +1,25 @@
+-------------
+Diff Quality
+Quality Report: {{ report_name }}
+Diff: {{ diff_name }}
+-------------
+{% if src_stats %}
+{% for src_path, stats in src_stats.iteritems() %}
+{% if stats.percent_covered < 100 %}
+{{ src_path }} ({{ stats.percent_covered|round(1) }}%):
+{% for line, message in stats.violations %}
+    {{ line }}: {{ message }}
+{% endfor %}
+{% else %}
+{{ src_path }} (100%)
+{% endif %}
+{% endfor %}
+-------------
+Total:   {{ total_num_lines }} line(s)
+Violations: {{ total_num_violations }} line(s)
+% Quality: {{ total_percent_covered }}%
+-------------
+{% else %}
+No lines with quality information in this diff.
+-------------
+{% endif %}
