@@ -20,7 +20,7 @@
 <tr>
 <td>{{ src_path }}</td>
 <td>{{ stats.percent_covered|round(1) }}%</td>
-<td>{{ stats.missing_lines|join(',') }}</td>
+<td>{{ stats.violation_lines|join(',') }}</td>
 </tr>
 {% else %}
 <tr>
@@ -33,7 +33,7 @@
 </table>
 <ul>
 <li><b>Total</b>: {{ total_num_lines }} line(s)</li>
-<li><b>Missing</b>: {{ total_num_missing }} line(s)</li>
+<li><b>Missing</b>: {{ total_num_violations }} line(s)</li>
 <li><b>Coverage</b>: {{ total_percent_covered }}%</li>
 </ul>
 {% else %}
