@@ -4,17 +4,23 @@ Implement the command-line tool interface.
 import argparse
 import sys
 import diff_cover
-from diff_reporter import GitDiffReporter
+from diff_cover.diff_reporter import GitDiffReporter
 from git_diff import GitDiffTool
-from violations_reporter import XmlCoverageReporter
-from report_generator import HtmlReportGenerator, StringReportGenerator
+from violations_reporter import XmlCoverageReporter, Pep8QualityReporter, PylintQualityReporter
+from report_generator import HtmlReportGenerator, StringReportGenerator, HtmlQualityReportGenerator, StringQualityReportGenerator
 from lxml import etree
 
 COVERAGE_XML_HELP = "XML coverage report"
 HTML_REPORT_HELP = "Diff coverage HTML output"
+VIOLATION_CMD_HELP = "Which code quality tool to use"
+
+QUALITY_REPORTERS = {
+    'pep8': Pep8QualityReporter,
+    'pylint': PylintQualityReporter
+}
 
 
-def parse_args(argv):
+def parse_coverage_args(argv):
     """
     Parse command line arguments, returning a dict of
     valid options:
@@ -36,13 +42,33 @@ def parse_args(argv):
     return vars(parser.parse_args(argv))
 
 
-def generate_report(coverage_xml=None, html_report=None):
+def parse_quality_args(argv):
+    """
+    Parse command line arguments, returning a dict of
+    valid options:
+
+        {
+            'violations': pep8 | pylint
+            'html_report': None | HTML_REPORT
+        }
+
+    where `HTML_REPORT` is a path.
+    """
+    parser = argparse.ArgumentParser(description=diff_cover.QUALITY_DESCRIPTION)
+    parser.add_argument('--violations', type=str, help=VIOLATION_CMD_HELP, required=True)
+    parser.add_argument('--html-report', type=str, default=None,
+                        help=HTML_REPORT_HELP)
+
+    return vars(parser.parse_args(argv))
+
+
+def generate_coverage_report(coverage_xml, html_report=None):
     """
     Generate the diff coverage report, using kwargs from `parse_args()`.
     """
     diff = GitDiffReporter(git_diff=GitDiffTool())
-    xml_roots = [etree.parse(xml_root) for xml_root in coverage_xml]
 
+    xml_roots = [etree.parse(xml_root) for xml_root in coverage_xml]
     coverage = XmlCoverageReporter(xml_roots, coverage_xml)
 
     # Build a report generator
@@ -57,13 +83,38 @@ def generate_report(coverage_xml=None, html_report=None):
     reporter.generate_report(output_file)
 
 
+def generate_quality_report(tool, html_report=None):
+    """
+    Generate the quality report, using kwargs from `parse_args()`.
+    """
+    diff = GitDiffReporter(git_diff=GitDiffTool())
+
+    if html_report is not None:
+        reporter = HtmlQualityReportGenerator(tool, diff)
+        output_file = open(html_report, "w")
+    else:
+        reporter = StringQualityReportGenerator(tool, diff)
+        output_file = sys.stdout
+
+    reporter.generate_report(output_file)
+
 def main():
     """
     Main entry point for the tool, used by setup.py
     """
-    arg_dict = parse_args(sys.argv[1:])
-    generate_report(coverage_xml=arg_dict['coverage_xml'],
-                    html_report=arg_dict['html_report'])
+    progname = sys.argv[0]
+
+    if progname.endswith('diff-cover'):
+        arg_dict = parse_coverage_args(sys.argv[1:])
+        generate_coverage_report(arg_dict['coverage_xml'],
+                                 html_report=arg_dict['html_report'])
+
+    elif progname.endswith('diff-quality'):
+        arg_dict = parse_quality_args(sys.argv[1:])
+        tool = arg_dict['violations']
+        reporter = QUALITY_REPORTERS[tool](tool)
+        generate_quality_report(reporter, arg_dict['html_report'])
+
 
 if __name__ == "__main__":
     main()
